# bazel_go_demo

./: BUILD.bazel  MODULE.bazel  bazel-bazel_go_demo  bazel-bin  bazel-out  bazel-testlogs  go.mod  go.sum  go.work  tools.go
libs/hello/: BUILD.bazel  go.mod  hello.go
services/one/: BUILD.bazel  go.mod  main.go
services/two/: go.mod  main.go
