# https://github.com/search?q=repo%3Agrpc%2Fgrpc-java+%40io_grpc_grpc_java&type=code
# https://bazelbuild.slack.com/archives/C014RARENH0/p1732665302462849
module(
    name = "bazel_go_demo",
    repo_name = "com_github_bennettzhu1_bazel_go_demo",
)

bazel_dep(name = "rules_go", version = "0.48.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.40.0", repo_name = "bazel_gazelle")

GO_VERSION = "1.22.5"

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = GO_VERSION)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")

# todo: update this with go.work?
go_deps.from_file(go_mod = "//:go.mod")
# go_deps.gazelle_default_attributes(
#     build_file_generation = "on",
#     directives = [
#         "gazelle:proto disable",
#         "gazelle:build_file_proto_mode disable_global",
#     ],
# )

# All *direct* Go dependencies of the module have to be listed explicitly.
# bazel run @io_bazel_rules_go/go -- mod tidy -v
# This list can be automatically updated by running "bazel mod tidy".
use_repo(
    go_deps,
    "com_github_alex_laties_gokitzap",
    "com_github_apparentlymart_go_cidr",
    "com_github_aws_aws_sdk_go",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_feature_rds_auth",
    "com_github_aws_aws_sdk_go_v2_service_sts",
    "com_github_aws_smithy_go",
    "com_github_azure_azure_sdk_for_go",
    "com_github_azure_azure_sdk_for_go_sdk_azcore",
    "com_github_azure_azure_sdk_for_go_sdk_azidentity",
    "com_github_azure_azure_sdk_for_go_sdk_resourcemanager_compute_armcompute",
    "com_github_azure_azure_sdk_for_go_sdk_resourcemanager_dns_armdns",
    "com_github_azure_azure_sdk_for_go_sdk_resourcemanager_network_armnetwork_v4",
    "com_github_azure_azure_sdk_for_go_sdk_resourcemanager_privatedns_armprivatedns",
    "com_github_azure_azure_sdk_for_go_sdk_resourcemanager_resources_armresources",
    "com_github_azure_azure_sdk_for_go_sdk_resourcemanager_resources_armsubscriptions",
    "com_github_azure_azure_sdk_for_go_sdk_storage_azqueue",
    "com_github_azure_go_autorest_autorest",
    "com_github_azure_go_autorest_autorest_adal",
    "com_github_azure_go_autorest_autorest_azure_auth",
    "com_github_azure_go_autorest_autorest_date",
    "com_github_azure_go_autorest_autorest_to",
    "com_github_blendle_zapdriver",
    "com_github_cenkalti_backoff",
    "com_github_cenkalti_backoff_v4",
    "com_github_cilium_cilium",
    "com_github_cloudevents_sdk_go_v2",
    "com_github_confluentinc_auditlog_emitter_go_v2",
    "com_github_confluentinc_bamboo_client_go",
    "com_github_confluentinc_cc_authz_mw",
    "com_github_confluentinc_cc_capacity_service_pkg_capacity",
    "com_github_confluentinc_cc_dns_forwarder_controller_manager_crd",
    "com_github_confluentinc_cc_fflags",
    "com_github_confluentinc_cc_region_discovery_sdk_go",
    "com_github_confluentinc_cc_secure_compute_gateway_api",
    "com_github_confluentinc_cc_structs_atlas",
    "com_github_confluentinc_cc_structs_common",
    "com_github_confluentinc_cc_structs_fleet_provider",
    "com_github_confluentinc_cc_structs_fleet_rollout_common",
    "com_github_confluentinc_cc_structs_kafka_authz",
    "com_github_confluentinc_cc_structs_kafka_core",
    "com_github_confluentinc_cc_structs_kafka_org",
    "com_github_confluentinc_cc_structs_operator",
    "com_github_confluentinc_cc_structs_scheduler_plugins_common",
    "com_github_confluentinc_cc_topology_service_pkg_client_go",
    "com_github_confluentinc_cc_traffic_policy_operator",
    "com_github_confluentinc_cc_utils",
    "com_github_confluentinc_cc_utils_idgen",
    "com_github_confluentinc_ccloud_sdk_go_v2_apikeys",
    "com_github_confluentinc_ccloud_sdk_go_v2_internal_cmk",
    "com_github_confluentinc_ccloud_sdk_go_v2_internal_networking",
    "com_github_confluentinc_ccloud_sdk_go_v2_internal_networking_access_point",
    "com_github_confluentinc_ccloud_sdk_go_v2_internal_networking_dnsforwarder",
    "com_github_confluentinc_ccloud_sdk_go_v2_internal_networking_gateway",
    "com_github_confluentinc_ccloud_sdk_go_v2_internal_networking_internal",
    "com_github_confluentinc_ccloud_sdk_go_v2_internal_networking_ip",
    "com_github_confluentinc_ccloud_sdk_go_v2_internal_networking_privatelink",
    "com_github_confluentinc_ccloud_sdk_go_v2_kafkarest",
    "com_github_confluentinc_cire_obelisk_pkg_apis_accesspoints",
    "com_github_confluentinc_cire_obelisk_pkg_apis_base",
    "com_github_confluentinc_cire_obelisk_pkg_apis_dnsforwarders",
    "com_github_confluentinc_cire_obelisk_pkg_apis_dnsrecords",
    "com_github_confluentinc_cire_obelisk_pkg_apis_egressdmzs",
    "com_github_confluentinc_cire_obelisk_pkg_apis_gateways",
    "com_github_confluentinc_cire_obelisk_pkg_apis_ingressedgenetworks",
    "com_github_confluentinc_cire_obelisk_pkg_apis_network",
    "com_github_confluentinc_cire_obelisk_pkg_apis_obelisk_site",
    "com_github_confluentinc_cire_obelisk_pkg_apis_privateendpoints",
    "com_github_confluentinc_cire_obelisk_pkg_apis_privatenetworkinterfaces",
    "com_github_confluentinc_cire_obelisk_pkg_apis_regionalcells",
    "com_github_confluentinc_cire_obelisk_pkg_apis_serviceendpoints",
    "com_github_confluentinc_cire_obelisk_pkg_apis_traffic",
    "com_github_confluentinc_cire_obelisk_pkg_apis_trafficcells_crossregion",
    "com_github_confluentinc_cire_obelisk_pkg_apis_trafficcells_crossregionsecuritygroups",
    "com_github_confluentinc_cire_obelisk_pkg_apis_trafficcells_ingressinternal",
    "com_github_confluentinc_cire_obelisk_pkg_apis_trafficcells_private",
    "com_github_confluentinc_confluent_kafka_go_v2",
    "com_github_confluentinc_confluent_otel_go_grpc",
    "com_github_confluentinc_confluent_otel_go_http",
    "com_github_confluentinc_confluent_otel_go_starter",
    "com_github_confluentinc_crn",
    "com_github_confluentinc_envoy_filters",
    "com_github_confluentinc_events_schema",
    "com_github_confluentinc_events_v3",
    "com_github_confluentinc_gandalf",
    "com_github_confluentinc_go_rds",
    "com_github_confluentinc_ingress_operator_api",
    "com_github_confluentinc_k8saas_grpc_api_api",
    "com_github_confluentinc_mds_sdk_go_mdsv2alpha1",
    "com_github_confluentinc_service_runtime_go",
    "com_github_coreos_go_oidc_v3",
    "com_github_datadog_datadog_api_client_go_v2",
    "com_github_datadog_datadog_go",
    "com_github_docker_docker",
    "com_github_envoyproxy_gateway",
    "com_github_envoyproxy_go_control_plane",
    "com_github_envoyproxy_protoc_gen_validate",
    "com_github_fatih_structtag",
    "com_github_fsnotify_fsnotify",
    "com_github_go_co_op_gocron_v2",
    "com_github_go_errors_errors",
    "com_github_go_kit_kit",
    "com_github_go_kit_log",
    "com_github_go_logr_zapr",
    "com_github_gogo_protobuf",
    "com_github_gogo_status",
    "com_github_golang_protobuf",
    "com_github_golangci_golangci_lint",
    "com_github_google_go_cmp",
    "com_github_google_gopacket",
    "com_github_google_uuid",
    "com_github_gorilla_mux",
    "com_github_grpc_ecosystem_go_grpc_middleware",
    "com_github_grpc_ecosystem_grpc_gateway",
    "com_github_hashicorp_go_multierror",
    "com_github_hashicorp_go_retryablehttp",
    "com_github_hashicorp_hcl",
    "com_github_hashicorp_logutils",
    "com_github_hashicorp_terraform_config_inspect",
    "com_github_hashicorp_terraform_exec",
    "com_github_hashicorp_vault_api",
    "com_github_hashicorp_vault_api_auth_approle",
    "com_github_iancoleman_strcase",
    "com_github_jackc_pgconn",
    "com_github_jackc_pgerrcode",
    "com_github_jackc_pgproto3_v2",
    "com_github_jackc_pgtype",
    "com_github_jackc_pgx_v4",
    "com_github_jmoiron_sqlx",
    "com_github_jonboulle_clockwork",
    "com_github_kelveny_gdbc",
    "com_github_kelveny_mockcompose",
    "com_github_lib_pq",
    "com_github_looplab_fsm",
    "com_github_lyft_protoc_gen_star",
    "com_github_lyft_protoc_gen_star_v2",
    "com_github_masaushi_accessory",
    "com_github_masterminds_squirrel",
    "com_github_mattn_go_isatty",
    "com_github_miekg_dns",
    "com_github_moznion_go_optional",
    "com_github_nlopes_slack",
    "com_github_oklog_run",
    "com_github_pires_go_proxyproto",
    "com_github_prometheus_client_model",
    "com_github_prometheus_common",
    "com_github_prometheus_community_pro_bing",
    "com_github_protocolbuffers_txtpbfmt",
    "com_github_remeh_sizedwaitgroup",
    "com_github_sercand_kuberesolver_v5",
    "com_github_sosodev_duration",
    "com_github_speps_go_hashids",
    "com_github_spf13_pflag",
    "com_github_stretchr_testify",
    "com_github_telepresenceio_watchable",
    "com_github_travisjeffery_mocker",
    "com_github_vektra_mockery_v2",
    "com_github_vishvananda_netlink",
    "com_github_xo_dburl",
    "com_github_zeebo_errs",
    "com_google_cloud_go_compute_metadata",
    "dev_gocloud",
    "in_gopkg_ini_v1",
    "in_gopkg_yaml_v3",
    "io_etcd_go_etcd_api_v3",
    "io_etcd_go_etcd_client_v3",
    "io_etcd_go_etcd_server_v3",
    "io_k8s_api",
    "io_k8s_apiextensions_apiserver",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_sigs_aws_iam_authenticator",
    "io_k8s_sigs_controller_runtime",
    "io_k8s_sigs_gateway_api",
    "io_k8s_sigs_yaml",
    "io_k8s_utils",
    "io_opentelemetry_go_collector_pdata",
    "io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_api",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_grpc_cmd_protoc_gen_go_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
    "org_golang_x_exp",
    "org_golang_x_net",
    "org_golang_x_oauth2",
    "org_golang_x_sync",
    "org_golang_x_time",
    "org_golang_x_tools",
    "org_uber_go_atomic",
    "org_uber_go_fx",
    "org_uber_go_mock",
    "org_uber_go_multierr",
    "org_uber_go_zap",
    "tools_gotest_gotestsum",
)
