# https://github.com/search?q=repo%3Agrpc%2Fgrpc-java+%40io_grpc_grpc_java&type=code
# https://bazelbuild.slack.com/archives/C014RARENH0/p1732665302462849
module(
    name = "bazel_go_demo",
    repo_name = "com_github_bennettzhu1_bazel_go_demo",
)

bazel_dep(name = "rules_go", version = "0.48.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.40.0", repo_name = "bazel_gazelle")

GO_VERSION = "1.22.5"

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = GO_VERSION)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_bennettzhu1_bazel_go_demo_libs_hello", "com_github_bennettzhu1_bazel_go_demo_services_one", "com_github_google_uuid", "com_github_labstack_echo_v4")
